--- a/index.html
+++ b/index.html
@@ -4,142 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      .btn {
-        padding-left: 0.75rem;
-        padding-right: 0.75rem;
-      }
-
-      .list-group-item {
-        padding: 0 1rem;
-      }
-
-      .d-flex > .btn {
-        flex: 1;
-      }
-
-      .carbonads {
-        border: 1px solid #ccc;
-        border-radius: 0.25rem;
-        font-size: 0.875rem;
-        overflow: hidden;
-        padding: 1rem;
-      }
-
-      .carbon-wrap {
-        overflow: hidden;
-      }
-
-      .carbon-img {
-        clear: left;
-        display: block;
-        float: left;
-      }
-
-      .carbon-text,
-      .carbon-poweredby {
-        display: block;
-        margin-left: 140px;
-      }
-
-      .carbon-text,
-      .carbon-text:hover,
-      .carbon-text:focus {
-        color: #fff;
-        text-decoration: none;
-      }
-
-      .carbon-poweredby,
-      .carbon-poweredby:hover,
-      .carbon-poweredby:focus {
-        color: #ddd;
-        text-decoration: none;
-      }
-
-      @media (min-width: 768px) {
-        .carbonads {
-          float: right;
-          margin-bottom: -1rem;
-          margin-top: -1rem;
-          max-width: 360px;
-        }
-      }
-
-      .footer {
-        font-size: 0.875rem;
-      }
-
-      .heart {
-        color: #ddd;
-        display: block;
-        height: 2rem;
-        line-height: 2rem;
-        margin-bottom: 0;
-        margin-top: 1rem;
-        position: relative;
-        text-align: center;
-        width: 100%;
-      }
-
-      .heart:hover {
-        color: #ff4136;
-      }
-
-      .heart::before {
-        border-top: 1px solid #eee;
-        content: ' ';
-        display: block;
-        height: 0;
-        left: 0;
-        position: absolute;
-        right: 0;
-        top: 50%;
-      }
-
-      .heart::after {
-        background-color: #fff;
-        content: '♥';
-        padding-left: 0.5rem;
-        padding-right: 0.5rem;
-        position: relative;
-        z-index: 1;
-      }
-
-      .docs-pictures {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-      }
-
-      .docs-pictures > li {
-        border: 1px solid transparent;
-        float: left;
-        height: calc(100% / 3);
-        margin: 0 -1px -1px 0;
-        overflow: hidden;
-        width: calc(100% / 3);
-      }
-
-      .docs-pictures > li > img {
-        cursor: -webkit-zoom-in;
-        cursor: zoom-in;
-        width: 100%;
-      }
-
-      .docs-buttons > .btn-group,
-      .docs-buttons > .input-group {
-        margin-bottom: 5px;
-        width: 100%;
-      }
-
-      .docs-buttons .input-group-prepend {
-        width: 50%;
-      }
-
-      .docs-buttons .input-group-prepend .btn {
-        width: 100%;
-      }
-    </style>
+    <link rel="stylesheet" href="./style/main.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/bootstrap@4/dist/css/bootstrap.min.css"
@@ -163,7 +28,7 @@
   <body>
     <header class="navbar navbar-light navbar-expand-md">
       <div class="container">
-        <a class="navbar-brand" href="./">Viewer.js</a>
+        <a class="navbar-brand" href="./">2023 몽골 아웃리치</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -175,137 +40,18 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div
-          class="collapse navbar-collapse justify-content-end"
-          id="navbar-collapse"
-          role="navigation"
-        >
-          <ul class="nav navbar-nav">
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="https://github.com/fengyuanchen/viewerjs/blob/main/README.md"
-                data-toggle="tooltip"
-                title=""
-                data-original-title="View the documentation"
-                >Docs</a
-              >
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdownMenuLink"
-                role="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Examples
-              </a>
-              <div
-                class="dropdown-menu"
-                aria-labelledby="navbarDropdownMenuLink"
-              >
-                <a class="dropdown-item" href="examples/custom-title.html"
-                  >Custom title</a
-                >
-                <a class="dropdown-item" href="examples/custom-toolbar.html"
-                  >Custom toolbar</a
-                >
-                <a class="dropdown-item" href="examples/dynamic-viewer.html"
-                  >Dynamic Viewer</a
-                >
-                <a class="dropdown-item" href="examples/moving-range-limit.html"
-                  >Moving range limit</a
-                >
-                <a class="dropdown-item" href="examples/viewer-in-modal.html"
-                  >Viewer in modal</a
-                >
-              </div>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="https://github.com/fengyuanchen/viewerjs"
-                data-toggle="tooltip"
-                title=""
-                data-original-title="View the GitHub project"
-                >GitHub</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="https://fengyuanchen.github.io/"
-                data-toggle="tooltip"
-                title=""
-                data-original-title="Explore more projects"
-                >Explore</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="https://chenfengyuan.com/"
-                data-toggle="tooltip"
-                title=""
-                data-original-title="About the author"
-                >About</a
-              >
-            </li>
-          </ul>
-        </div>
       </div>
     </header>
 
-    <div class="jumbotron bg-primary text-white rounded-0">
+    <div class="jumbotron text-gray rounded-0 brand-logo">
       <div class="container">
         <div class="row">
           <div class="col-md">
-            <h1>Viewer.js <small class="h6">v1.11.4</small></h1>
-            <p class="lead">JavaScript image viewer.</p>
-          </div>
-          <div class="col-md">
-            <div class="carbonads">
-              <script
-                id="_carbonads_js"
-                src="https://cdn.carbonads.com/carbon.js?serve=CKYI55Q7&amp;placement=fengyuanchengithubio"
-                async=""
-              ></script>
-              <div id="carbonads">
-                <span
-                  ><span class="carbon-wrap"
-                    ><a
-                      href="https://srv.carbonads.net/ads/click/x/GTND42J7CTBDVKQWCABLYKQNF6YDKK7WCV7I6Z3JCYAI4K3LCT7DT5QKC6BI527WCAYDVK3ECW7DE2Q7CE7ICK3WHEYIK5QECESD653ECTNCYBZ52K?segment=placement:fengyuanchengithubio;"
-                      class="carbon-img"
-                      target="_blank"
-                      rel="noopener sponsored"
-                      ><img
-                        src="https://cdn4.buysellads.net/uu/1/127419/1670531697-AdobeTeams.jpg"
-                        alt="ads via Carbon"
-                        border="0"
-                        height="100"
-                        width="130"
-                        style="max-width: 130px" /></a
-                    ><a
-                      href="https://srv.carbonads.net/ads/click/x/GTND42J7CTBDVKQWCABLYKQNF6YDKK7WCV7I6Z3JCYAI4K3LCT7DT5QKC6BI527WCAYDVK3ECW7DE2Q7CE7ICK3WHEYIK5QECESD653ECTNCYBZ52K?segment=placement:fengyuanchengithubio;"
-                      class="carbon-text"
-                      target="_blank"
-                      rel="noopener sponsored"
-                      >Adobe Creative Cloud for Teams. Put creativity to
-                      work.</a
-                    ></span
-                  ><a
-                    href="http://carbonads.net/?utm_source=fengyuanchengithubio&amp;utm_medium=ad_via_link&amp;utm_campaign=in_unit&amp;utm_term=carbon"
-                    class="carbon-poweredby"
-                    target="_blank"
-                    rel="noopener sponsored"
-                    >ads via Carbon</a
-                  ></span
-                >
-              </div>
-            </div>
+            <h1>
+              태초에 하나님이 천지를 창조하시니라
+              <small class="h6">창세기 1:1</small>
+            </h1>
+            <p class="lead">2023.07.17 - 2023.07.24</p>
           </div>
         </div>
       </div>
