--- a/index.html
+++ b/index.html
@@ -28,18 +28,7 @@
   <body>
     <header class="navbar navbar-light navbar-expand-md">
       <div class="container">
-        <a class="navbar-brand" href="./">2023 몽골 아웃리치</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbar-collapse"
-          aria-controls="navbar-collapse"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <a class="navbar-brand" href="./">2023 HUB 몽골 아웃리치</a>
       </div>
     </header>
 
@@ -58,9 +47,9 @@
     </div>
 
     <div class="container">
-      <h1>Mongolia</h1>
+      <h1>사진</h1>
       <div class="row">
-        <div class="col-sm-8 col-md-6">
+        <div class="col-sm-8 col-md-auto">
           <div class="mb-3">
             <ul id="images" class="docs-pictures clearfix">
               <!-- <li><img src="assets/img/picture-1.jpg" alt="Picture 1" /></li> -->
