--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <title>2023 Mongolia Outreach</title>
   </head>
   <body>
-    <header class="navbar navbar-light navbar-expand-md">
+    <!-- <header class="navbar navbar-light navbar-expand-md">
       <div class="container">
         <a class="navbar-brand" href="./">2023 HUB 몽골 아웃리치</a>
       </div>
-    </header>
+    </header> -->
 
-    <div class="jumbotron text-gray rounded-0 brand-logo">
+    <div class="jumbotron text-navy rounded-0 brand-logo">
       <div class="container">
         <div class="row">
           <div class="col-md">
@@ -40,7 +40,10 @@
               태초에 하나님이 천지를 창조하시니라
               <small class="h6">창세기 1:1</small>
             </h1>
-            <p class="lead">2023.07.17 - 2023.07.24</p>
+            <h3>
+              2023 HUB 몽골 아웃리치
+              <small class="h6">2023.07.17 - 2023.07.24</small>
+            </h3>
           </div>
         </div>
       </div>
