--- a/index.html
+++ b/index.html
@@ -26,13 +26,7 @@
     <title>2023 Mongolia Outreach</title>
   </head>
   <body>
-    <!-- <header class="navbar navbar-light navbar-expand-md">
-      <div class="container">
-        <a class="navbar-brand" href="./">2023 HUB 몽골 아웃리치</a>
-      </div>
-    </header> -->
-
-    <div class="jumbotron text-navy rounded-0 brand-logo">
+    <div class="jumbotron text-white rounded-0 brand-logo">
       <div class="container">
         <div class="row">
           <div class="col-md">
@@ -55,22 +49,90 @@
         <div class="col-sm-8 col-md-auto">
           <div class="mb-3">
             <ul id="images" class="docs-pictures clearfix">
-              <!-- <li><img src="assets/img/picture-1.jpg" alt="Picture 1" /></li> -->
-              <li><img src="assets/img/picture-2.jpeg" alt="Picture 2" /></li>
-              <li><img src="assets/img/picture-3.jpeg" alt="Picture 3" /></li>
-              <li><img src="assets/img/picture-4.jpeg" alt="Picture 4" /></li>
-              <li><img src="assets/img/picture-5.jpeg" alt="Picture 5" /></li>
-              <li><img src="assets/img/picture-6.jpeg" alt="Picture 6" /></li>
-              <li><img src="assets/img/picture-7.jpeg" alt="Picture 7" /></li>
-              <li><img src="assets/img/picture-8.jpeg" alt="Picture 8" /></li>
-              <!-- <li><img src="assets/img/picture-9.jpeg" alt="Picture 9" /></li> -->
-              <li><img src="assets/img/picture-10.jpeg" alt="Picture 10" /></li>
-              <li><img src="assets/img/picture-11.jpeg" alt="Picture 11" /></li>
-              <li><img src="assets/img/picture-12.jpeg" alt="Picture 12" /></li>
-              <li><img src="assets/img/picture-13.jpeg" alt="Picture 13" /></li>
-              <li><img src="assets/img/picture-14.jpeg" alt="Picture 14" /></li>
-              <li><img src="assets/img/picture-15.jpeg" alt="Picture 15" /></li>
-              <li><img src="assets/img/picture-16.jpeg" alt="Picture 16" /></li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-2.jpeg"
+                  alt="Picture 2"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-3.jpeg"
+                  alt="Picture 3"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-4.jpeg"
+                  alt="Picture 4"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-5.jpeg"
+                  alt="Picture 5"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-6.jpeg"
+                  alt="Picture 6"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-7.jpeg"
+                  alt="Picture 7"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-8.jpeg"
+                  alt="Picture 8"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-10.jpeg"
+                  alt="Picture 10"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-11.jpeg"
+                  alt="Picture 11"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-12.jpeg"
+                  alt="Picture 12"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-13.jpeg"
+                  alt="Picture 13"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-14.jpeg"
+                  alt="Picture 14"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-15.jpeg"
+                  alt="Picture 15"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-16.jpeg"
+                  alt="Picture 16"
+                />
+              </li>
             </ul>
           </div>
         </div>
