feat: 반응형 적용

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     <title>2023 Mongolia Outreach</title>
   </head>
   <body>
-    <div class="jumbotron text-white rounded-0 brand-logo">
+    <div class="jumbotron text-white rounded-0 brand-logo" id="door">
       <div class="container">
         <div class="row">
           <div class="col-md">
-            <h1>
+            <h1 id="title-bible">
               태초에 하나님이 천지를 창조하시니라
               <small class="h6">창세기 1:1</small>
             </h1>
-            <h3>
+            <h3 id="team">
               2023 HUB 몽골 아웃리치
               <small class="h6">2023.07.17 - 2023.07.24</small>
             </h3>
@@ -51,12 +51,6 @@
             <ul id="images" class="docs-pictures clearfix">
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-2.jpeg"
-                  alt="Picture 2"
-                />
-              </li>
-              <li>
-                <img
                   src="https://d6cjuwf9jj9iv.cloudfront.net/picture-3.jpeg"
                   alt="Picture 3"
                 />
@@ -65,6 +59,18 @@
                 <img
                   src="https://d6cjuwf9jj9iv.cloudfront.net/picture-4.jpeg"
                   alt="Picture 4"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-13.jpeg"
+                  alt="Picture 13"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-2.jpeg"
+                  alt="Picture 2"
                 />
               </li>
               <li>
@@ -111,12 +117,6 @@
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-13.jpeg"
-                  alt="Picture 13"
-                />
-              </li>
-              <li>
-                <img
                   src="https://d6cjuwf9jj9iv.cloudfront.net/picture-14.jpeg"
                   alt="Picture 14"
                 />
@@ -133,6 +133,332 @@
                   alt="Picture 16"
                 />
               </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-130.jpg"
+                />
+              </li>
+              <li></li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-102.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-101.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-100.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-103.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-104.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-108.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-106.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-107.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-105.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-109.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-110.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-111.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-112.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-113.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-114.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-115.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-116.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-117.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-119.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-120.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-121.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-124.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-125.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-122.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-123.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-118.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-126.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-135.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-136.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-127.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-128.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-129.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-131.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-132.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-133.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-134.jpg"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-200.JPG"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-201.JPG"
+                />
+              </li>
+              <!-- <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-202.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-203.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-204.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-205.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-206.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-207.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-208.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-209.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-210.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-211.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-212.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-213.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-214.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-215.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-216.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-217.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-218.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-219.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-220.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-221.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-222.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-223.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-224.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-225.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-226.HEIC"
+                />
+              </li>
+              <li>
+                <img
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-227.HEIC"
+                />
+              </li> -->
             </ul>
           </div>
         </div>
