feat: HEIC 파일 대신 jpg 파일 가져옴

--- a/index.html
+++ b/index.html
@@ -329,136 +329,136 @@
                   src="https://d6cjuwf9jj9iv.cloudfront.net/picture-201.JPG"
                 />
               </li>
-              <!-- <li>
+              <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-202.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-202.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-203.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-203.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-204.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-204.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-205.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-205.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-206.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-206.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-207.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-207.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-208.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-208.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-209.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-209.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-210.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-210.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-211.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-211.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-212.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-212.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-213.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-213.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-214.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-214.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-215.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-215.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-216.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-216.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-217.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-217.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-218.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-218.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-219.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-219.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-220.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-220.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-221.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-221.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-222.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-222.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-223.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-223.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-224.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-224.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-225.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-225.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-226.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-226.jpg"
                 />
               </li>
               <li>
                 <img
-                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-227.HEIC"
+                  src="https://d6cjuwf9jj9iv.cloudfront.net/picture-227.jpg"
                 />
-              </li> -->
+              </li>
             </ul>
           </div>
         </div>
