--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      property="og:image"
+      content="https://d6cjuwf9jj9iv.cloudfront.net/milkyway.jpeg"
+    />
     <link rel="stylesheet" href="./style/main.css" />
     <link
       rel="stylesheet"
