--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <title>2023 Mongolia Outreach</title>
+    <link rel="icon" href="favicon.svg" sizes="any" type="data:image/svg+xml" />
   </head>
   <body>
     <div class="jumbotron text-white rounded-0 brand-logo" id="door">
@@ -48,7 +49,6 @@
     </div>
 
     <div class="container">
-      <!-- <h1>사진</h1> -->
       <div class="row">
         <div class="col-sm-8 col-md-auto">
           <div class="mb-3">
