feat: 링크 공유 title, description 설정

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       property="og:image"
       content="https://d6cjuwf9jj9iv.cloudfront.net/milkyway.jpeg"
     />
+    <meta property="og:title" content="2023 HUB 몽골 아웃리치" />
+    <meta
+      property="og:description"
+      content="태초에 하나님이 천지를 창조하시니라 (창세기 1:1)"
+    />
     <link rel="stylesheet" href="./style/main.css" />
     <link
       rel="stylesheet"
